--- a/hello.html
+++ b/hello.html
@@ -7,8 +7,8 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>Welcome to website!</h1>
-    <h2> Emmanuel's Website<h2/>
+    <h1>Welcome to website!!!</h1>
+    <h2> Emmanuel's Website</h2>
  <h2>Hello World</h2>   
 </body>
 </html>
